...
            <CodeBlockView
                code={props.content}
                language={props.language}
                selectable={props.selectable}
                wrap={false}
                showCopyButton={true}
                scrollTestID="markdown-code-block-scroll"
            />
        );
    }

    if (files.length === 0) {
        return (
...
