...
                        style={styles.headerButton}
                    >
                        <Ionicons name="timer-outline" size={22} color={theme.colors.chrome.header.foreground} />
                    </Pressable>
                ) : null}
                <Pressable
                    testID="main-header-start-new-session"
                    onPress={() => router.push('/new')}
                    hitSlop={15}
                    style={styles.headerButton}
                >
                    <Ionicons name="add-outline" size={28} color={theme.colors.chrome.header.foreground} />
                </Pressable>
...
