...
                                    onTouchCancel: recordNativeTranscriptTouchEndIntent,
                                    onTouchEnd: recordNativeTranscriptTouchEndIntent,
                                    onTouchMove: recordNativeTranscriptTouchIntent,
                                    onTouchStart: recordNativeTranscriptTouchStartIntent,
                              } as any)
              )}
          testID="transcript-chat-list"
          data={listData}
          extraData={transcriptListExtraData}
          inverted={true}
          key={props.sessionId}
                      nativeID={chatListNativeId}
                      keyExtractor={keyExtractor}
...
